--- a/MERJMirrorWeb/WebContent/templates/commonHeader.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonHeader.xhtml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	    xmlns:f="http://java.sun.com/jsf/core"
-	    xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+	    xmlns:ui="http://java.sun.com/jsf/facelets"
+        xmlns:p="http://primefaces.org/ui">
 
   <body>
     
@@ -17,7 +16,10 @@
           </p:submenu>
         </p:submenu>
     </p:menubar>
-  
+    
+    <ui:composition>
+        <h1>This is the default header</h1>
+    </ui:composition>
   </body>
   
 </html>
