Commenting and formating

--- a/MERJMirrorWeb/WebContent/templates/commonContent.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonContent.xhtml
@@ -2,11 +2,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:ui="http://java.sun.com/jsf/facelets">
-	
 
     <body>
+        <!-- If this shows up on a web page it means the the Template has faild and should look at the page xhtml file
+             where the tag <ui:define name="content"> is located. -->
         <ui:composition>
-            <h1>This is a bad sign. Templet did not work</h1>
+            <h1>This is a bad sign. Template did not work</h1>
         </ui:composition>
     </body>
 </html>
