--- a/MERJMirrorWeb/WebContent/templates/commonFooter.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonFooter.xhtml
@@ -5,6 +5,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 
     <body>
+        <!-- Footer to show on every single page. -->
         <ui:composition>
             <pre>
                 MERJ Mirror Web App  Written by Ryan Cross
@@ -12,5 +13,5 @@
             </pre>
         </ui:composition>
     </body>
-  
+
 </html>
