--- a/MERJMirrorWeb/WebContent/templates/commonTemplate.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonTemplate.xhtml
@@ -5,43 +5,46 @@
 	    xmlns:h="http://java.sun.com/jsf/html"
         xmlns:ui="http://java.sun.com/jsf/facelets"
         xmlns:p="http://primefaces.org/ui">
-  
+
     <h:head>
         <title>MERJ Mirror Web App</title>
     </h:head>
-  
+
+    <!-- Template for each web page. -->
     <body bgcolor="#b3daff">
-      
+
         <h:form>
             <div id = "page">
-    
+
                 <div id = "header">
                     <ui:insert name = "header">
                         <ui:include src = "/templates/commonHeader.xhtml" />
                     </ui:insert>
                 </div>
-                
+
                 <br />
                 <br />
-      
+
                 <div id = "content">
                     <ui:insert name = "content">
                         <ui:include src = "/templates/commonContent.xhtml" />
                     </ui:insert>
                 </div>
-                
+
                 <br />
                 <br />
-                
+
                 <p:separator />
-      
+
                 <div id = "footer">
                     <ui:insert name = "footer">
                         <ui:include src = "/templates/commonFooter.xhtml" />
                     </ui:insert>
                 </div>
+
             </div>
         </h:form>
+
     </body>
-  
+
 </html>
