Fixing Bugs in the User Page arounf the Delete and create Functions.

--- a/MERJMirrorWeb/WebContent/templates/commonHeader.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonHeader.xhtml
@@ -15,7 +15,7 @@
           <p:separator />
           <p:submenu label = "#{applicationBean.getProperty('label.menu.new')}">
             <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.user')}" url = "Users.jsf" />
-            <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.pref')}" url = "#" />
+            <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.pref')}" url = "newPref.jsf" />
           </p:submenu>
           <p:separator />
           <p:menuitem value = "#{applicationBean.getProperty('label.menu.config')}" url = "config.jsf" />
