--- a/MERJMirrorWeb/WebContent/templates/commonContent.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonContent.xhtml
@@ -1,13 +1,16 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version = "1.0" encoding = "ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:ui="http://java.sun.com/jsf/facelets">
 
-    <body>
-        <!-- If this shows up on a web page it means the the Template has faild and should look at the page xhtml file
+<html xmlns    = "http://www.w3.org/1999/xhtml"
+      xmlns:h  = "http://java.sun.com/jsf/html"
+	  xmlns:ui = "http://java.sun.com/jsf/facelets">
+
+    <h:body>
+        <!-- If this shows up on a web page it means the the Template has failed and should look at the page xhtml file
              where the tag <ui:define name="content"> is located. -->
         <ui:composition>
-            <h1>This is a bad sign. Template did not work</h1>
+            <h:outputText value = "#{applicationBean.getProperty('template.content.default')}" />
         </ui:composition>
-    </body>
+    </h:body>
+
 </html>
