--- a/MERJMirrorWeb/WebContent/templates/commonHeader.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonHeader.xhtml
@@ -1,29 +1,31 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<?xml version = "1.0" encoding = "ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	    xmlns:ui="http://java.sun.com/jsf/facelets"
-        xmlns:p="http://primefaces.org/ui">
 
-  <body>
-    <!-- Default Header. This header to  be show on all pages. Contains the menu with re-diction options -->
-    <ui:composition>
-        <!--  Deal with the rest of this. Like the banner -->
+<html xmlns     = "http://www.w3.org/1999/xhtml"
+      xmlns:h   = "http://java.sun.com/jsf/html"
+	  xmlns:ui  = "http://java.sun.com/jsf/facelets"
+      xmlns:p   = "http://primefaces.org/ui">
 
-      <p:menubar>
-        <p:submenu label = "#{applicationBean.getProperty('label.menu')}">
-          <p:menuitem value="#{applicationBean.getProperty('label.menu.user')}" url = "Users.jsf" />
-          <p:separator />
-          <p:submenu label = "#{applicationBean.getProperty('label.menu.new')}">
-            <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.user')}" url = "Users.jsf" />
-            <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.pref')}" url = "newPref.jsf" />
-          </p:submenu>
-          <p:separator />
-          <p:menuitem value = "#{applicationBean.getProperty('label.menu.config')}" url = "config.jsf" />
-        </p:submenu>
-        <p:menuitem value="#{applicationBean.getProperty('label.menu.pref')}" url = "prefList.jsf" />
-      </p:menubar>
+    <h:body>
+        <!-- Default Header. This header to  be show on all pages. Contains the menu with re-diction options -->
+        <ui:composition>
+            <!--  Deal with the rest of this. Like the banner -->
+            <p:menubar>
+                <p:submenu label = "#{applicationBean.getProperty('label.menu')}">
+                    <p:menuitem value = "#{applicationBean.getProperty('label.menu.user')}" url = "Users.jsf" />
+                    <p:separator />
+                    <p:submenu label = "#{applicationBean.getProperty('label.menu.new')}">
+                        <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.user')}" url = "Users.jsf" />
+                        <p:menuitem value = "#{applicationBean.getProperty('label.menu.new.pref')}" url = "newPref.jsf" />
+                    </p:submenu>
+                    <p:separator />
+                    <p:menuitem value = "#{applicationBean.getProperty('label.menu.config')}" url = "config.jsf" />
+                </p:submenu>
+                <p:menuitem value = "#{applicationBean.getProperty('label.menu.pref')}" url = "prefList.jsf" />
+            </p:menubar>
 
-    </ui:composition>
-  </body>
+        </ui:composition>
+
+    </h:body>
 
 </html>
