--- a/MERJMirrorWeb/WebContent/templates/commonTemplate.xhtml
+++ b/MERJMirrorWeb/WebContent/templates/commonTemplate.xhtml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-	    xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:ui="http://java.sun.com/jsf/facelets"
-        xmlns:p="http://primefaces.org/ui">
+<html xmlns    = "http://www.w3.org/1999/xhtml"
+	  xmlns:h  = "http://java.sun.com/jsf/html"
+      xmlns:ui = "http://java.sun.com/jsf/facelets"
+      xmlns:p  = "http://primefaces.org/ui">
 
     <h:head>
-        <title>MERJ Mirror Web App</title>
+        <title>#{applicationBean.getProperty('page.title')}</title>
     </h:head>
 
     <!-- Template for each web page. -->
-    <body bgcolor="#b3daff">
+    <body bgcolor = "#{applicationBean.getProperty('page.background.color')}">
 
         <h:form>
             <div id = "page">
